Rewrite README for a one screen overview and a runnable quick start (#303)
The Overview packed six facts into one 892 character paragraph, Status described the wire format internals, Quick start mentioned the two Arrow JVM options without listing them, and Documentation repeated the headings of features.md. Split the Overview into three short paragraphs, cut Status to four sentences with a link to the wire format design note, put the JVM options and a minimal attach and search in the Quick start so a reader can start from the README alone, and turn the Documentation list into one line per reader goal.

Signed-off-by: Sotaro Hikita <bering1814@gmail.com>